# commonlibrary_rust_ylong_json

./: BUILD.gn  Cargo.toml  README.en.md  README.md  README_EN.md  README_zh.md  bundle.json
benches/: deserialize_json_cmp.rs  serialize_json_cmp.rs
benches/task_helpers/: mod.rs
docs/: user_guide.md  user_guide_zh.md
examples/: ylong_json_example.rs  ylong_json_perf.rs
patches/: patches.json
src/: adapter.rs  consts.rs  deserializer.rs  encoder.rs  error.rs  lib.rs  linked_list.rs  serializer_compact.rs  states.rs  value.rs
src/reader/: io_reader.rs  mod.rs  slice_reader.rs
src/value/: array.rs  index.rs  number.rs  object.rs
src/value/array/: linked_list.rs  vec.rs
src/value/object/: btree.rs  linked_list.rs  vec.rs
tests/: sdv_adapt_serde_test.rs  sdv_adapter_test.rs  ylong_json_sdv_test.rs
